fix: align center

--- a/packages/@dcl/inspector/src/components/EntityInspector/StatesInspector/StatesInspector.css
+++ b/packages/@dcl/inspector/src/components/EntityInspector/StatesInspector/StatesInspector.css
@@ -12,6 +12,7 @@
 
 .StatesInspector .states-list .content .row {
   display: flex;
+  align-items: center;
 }
 
 .StatesInspector .states-list .content .row+.row {
